# claude-budget

./: README.md  package.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml  publish.yml
skills/claude-budget-statusline/: SKILL.md
skills/claude-budget-statusline/assets/: statusline-segment.sh
src/: cli.js  core.js
src/claude_budget/: __init__.py  cli.py  core.py
test/: core.test.js
