[project]
name = "claude-budget"
version = "0.1.0"
description = "Configurable Claude spend readout for the Claude Code statusline, calibrated against your real bill."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Frank Bernhardt" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/frank-bee/claude-budget"

[project.scripts]
budget = "claude_budget.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_budget"]
